# openclaw-web

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  openclaw-browser-audit.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cursor/rules/: logging-observability.mdc  openclaw-project.mdc  packages-conventions.mdc  packages-lib.mdc  project.mdc
.impeccable/: design.json
.trae/rules/: project.mdc  ui-design-bits.mdc
apps/claw-container/: index.html  package.json  vite.config.ts
apps/claw_manager/: AGENTS.md  SOLUTION.md  index.html  package.json  server.ts  vite.config.ts
apps/quick-notes/: .gitignore  build-deb.sh  index.html  package.json  vite.config.ts
apps/quick-notes/src-tauri/: Cargo.toml  tauri.conf.json
apps/quick-notes/src-tauri/icons/: icon.icns
apps/quick-notes/src-tauri/src/: lib.rs  main.rs
apps/web-claw/: components.json  index.html  package.json  vite.config.ts
demos/browserpod-demo/: index.html  package.json
demos/webcontainer-openclaw/: README.md  components.json  index.html  package.json  terminal.config.json  tsconfig.json  vite.config.ts
docs/: README.md
docs/design/: BitsUI.md  Iconography.md
docs/micro_specs/: 2026-05-02_12-00_claw-container-svelte-spa-router.md  2026-05-02_15-00_claw-container-component-showcase.md  2026-05-02_16-00_webcontainer-openclaw-core-extract.md  2026-05-02_17-00_claw-container-home-top-tabs.md  2026-06-16_18-22_quick-notes-note-autosave.md  (+1 more)
protocols/: RIPER-5.md  RIPER-DOC.md  SDD-RIPER-ONE (Dual-Coop).md  SDD-RIPER-ONE.md
references/: spec-template.md
(+273 files in other folders)
