[package]
name = "quick-notes"
version = "0.0.0"
description = "A local desktop app for quick tasks and notes."
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "quick_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
